# bookmark_manager

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: config.rs  csv.rs  format_output.rs  git.rs  main.rs  output_utils.rs  tags.rs
src/cli_output/: mod.rs  search_result_output.rs  utils.rs
src/commands/: add.rs  mod.rs  search.rs  tags.rs
src/csv/: csv_line_reader.rs  csv_line_writer.rs  mod.rs
tests/: cli.rs
tool/: bm_completions.bash
