[package]
name = "bm"
version = "1.0.0"
edition = "2021"
authors = ["kphayen <kphayen@gmail.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
anyhow = "1.0.42"
ansi_term = "0.12.1"
regex = "1.5.4"
validator = { version = "0.14.0", features = ["derive"] }
git2 = "0.13.21"

[dev-dependencies]
assert_cmd = "2.0.0"
predicates = "2.0.1"
tempfile = "3.2.0"