[package]
name = "bm"
version = "1.0.0"
edition = "2021"
authors = ["kphayen <kphayen@gmail.com>"]
publish = false
rust-version = "1.58"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.42"
ansi_term = "0.12.1"
regex = "1.5.4"
validator = { version = "0.16", features = ["derive"] }
git2 = "0.18.1"

[dev-dependencies]
assert_cmd = "2.0.0"
predicates = "3.0.3"
tempfile = "3.2.0"