[package]
name = "bm"
version = "1.0.0"
edition = "2024"
authors = ["kphayen <kphayen@gmail.com>"]
publish = false
rust-version = "1.86"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.42"
clap = { version = "4", features = ["derive"] }
git2 = "0.20"
regex = "1.5.4"
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.0"
predicates = "3.0.3"
tempfile = "3.2.0"
